add GUI + adjustment

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -10,3 +10,12 @@ canvas {
   top: 0;
   left: 0;
 }
+
+.tuto {
+  color: white;
+  background: black;
+  display: inline-block;
+  font-size: 60px;
+  padding: 40px;
+  font-family: sans-serif;
+}
