--- a/server/view/index.ejs
+++ b/server/view/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <title>DonjonLoop</title>
+    <title>DungeonVR</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
@@ -10,6 +10,5 @@
     </script>
   </head>
   <body>
-    <div id="app"></div>
   </body>
   
