--- a/server/view/index.ejs
+++ b/server/view/index.ejs
@@ -2,13 +2,62 @@
 <html lang="fr">
   <head>
     <title>DungeonVR</title>
+    <meta name="description" content="Jeu VR sur navigateur" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
     <script src="/app.js"></script>
-    <script>
-    </script>
+    <style type="text/css">
+      @font-face {
+        font-family: 'fontello';
+        src: url('assets/fontello.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+      body {
+        margin:0;
+        padding: 0;
+      }
+      .panel {
+        display: inline-block;
+        position: fixed;
+        top: 50%;
+        right: 50%;
+        padding: 2rem 1rem 2rem 3rem;
+        transform: translate(50%, -50%);
+        background: white;
+        border: solid;
+        font-family: sans-serif;
+        z-index: 3;
+      }
+      .panel__link {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      }
+      .logo {
+        margin-bottom: 1rem;
+      }
+      .icon {
+        font-family: "fontello";
+        font-size: 2rem;
+        text-decoration: none;
+        margin-left: 1rem;
+        vertical-align: middle;
+      }
+      .icon-twitter-bird:before { content: '\f303'; color:#1d9bf0;}
+      .icon-youtube:before { content: '\f315'; color:red; } 
+    </style>
   </head>
   <body>
+    <div class="panel">
+      <img class="logo" src="assets/logo.png" alt="logo codeur de nuit">
+      <p><b> DungeonVR</b> est un jeu d'action aventure en VR. </p>
+      <p> 1 - Brancher votre casque et activer OculusLink si vous êtes sur Quest 2. </p>
+      <p> 2 - Cliquer sur le bouton ENTER VR  et profiter de l'experience. </p>
+      <div class="panel__link">
+        <a class="icon icon-youtube" href="https://youtu.be/6Gc-SJBmTzs"></a>
+        <a class="icon icon-twitter-bird" href="https://twitter.com/Codeur_de_nuit"></a>
+      </div>
+    </div>
   </body>
   
